# uniwa-ice-oop

./: CMakeLists.txt  Foititis.cpp  Foititis2.cpp  README.md
uniwa-ice-oop-ex4/: App.cpp  App.h  AppSystem.cpp  AppSystem.h  CMakeLists.txt  Developer.cpp  Developer.h  Ex4.cpp  Exceptions.h  Game.cpp  Game.h  Office.cpp  Office.h  README.md  Rating.cpp  Rating.h  input_file
uniwa-ice-oop-project/: CMakeLists.txt  Course.cpp  Course.h  Dashboard.cpp  Dashboard.h  Exceptions.h  README.md  Student.cpp  Student.h  courses.csv  error.csv  grades.csv  loadData.cpp  main.cpp  mapping.csv  output.csv  students.csv
